# blockchain-rust

./: README.md
basic_prototype_1/: Cargo.toml
basic_prototype_1/examples/: bc.rs
basic_prototype_1/src/: lib.rs
basic_prototype_1/src/blocks/: block.rs  blockchain.rs  mod.rs
proof_work_2/: Cargo.toml
proof_work_2/examples/: bc.rs
proof_work_2/src/: lib.rs
proof_work_2/src/blocks/: block.rs  blockchain.rs  mod.rs  proofwork.rs
proof_work_2/src/utils/: serializer.rs
