[package]
name = "proof_work_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
rust-crypto = "0.2.36"
primitive-types = "0.12.0"
bincode = "1.3.3"
serde = { version = "1", features = ["derive"] }
hex = { version = "0.4"}